huawei: fix reading IPv4 address in BE systems

Tested by: <than@redhat.com>

https://bugs.freedesktop.org/show_bug.cgi?id=94777